<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin"
    android:background="@drawable/card_bg"
    android:elevation="@dimen/list_item"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/choice_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/choice_text" />

        <EditText
            android:id="@+id/choice_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/question_choice_color" />

    </LinearLayout>

    <EditText
        android:id="@+id/choice_guardian_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choice_guardian_address" />
</LinearLayout>