<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Members.MemberAddActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="@string/member" />

    <EditText
        android:id="@+id/member_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:background="@drawable/text_box"
        android:hint="@string/memberName"
        android:padding="@dimen/margin_medium" />


    <EditText
        android:id="@+id/member_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:background="@drawable/text_box"
        android:hint="@string/memberAddress"
        android:padding="@dimen/margin_medium" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/member_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/colorAccent"
        android:tint="@color/colorAccentText"
        app:srcCompat="@android:drawable/ic_menu_send" />
</LinearLayout>